--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="textBx">
                     <p><span>"</span> I liked this place. It was soo warm. I made a lot of new friends here. Altough I did not have a chance to visit the whole westeros. I only visited Winterfell and it was really fun to be here. <span>"</span> </p>
-                    <h3>Drogon</h3>
+                    <h3>Knight King</h3>
                 </div>
             </div>
         </div>
